dom/base/ShadowRoot.h
@@ -183,6 +183,8 @@ protected:
   // mark whether it is in the composed document, but we have run out of flags
   // so instead we track it here.
   bool mIsComposedDocParticipant;
+
+  nsresult Clone(mozilla::dom::NodeInfo *aNodeInfo, nsINode **aResult) const override;
 };
 
 class ShadowRootStyleSheetList : public StyleSheetList
